<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:background="@drawable/edit_text_background"
    android:padding="16dp"
    tools:context=".MainActivity2">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/title_size"
        android:text="@string/registration_successful"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/nameHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/birthDateHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title" />

    <TextView
        android:id="@+id/birthDateHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/birth_date"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/emailHeader"
        app:layout_constraintStart_toEndOf="@id/nameHeader"
        app:layout_constraintTop_toTopOf="@id/nameHeader" />

    <TextView
        android:id="@+id/emailHeader"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/email_id"
        android:textColor="@color/black"
        android:textSize="@dimen/subtitle_text_size"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/birthDateHeader"
        app:layout_constraintTop_toTopOf="@id/nameHeader" />

    <TextView
        android:id="@+id/nameValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        app:layout_constraintEnd_toStartOf="@id/birthDateValue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameHeader"
        tools:text="@string/name" />

    <TextView
        android:id="@+id/birthDateValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        app:layout_constraintEnd_toStartOf="@id/emailValue"
        app:layout_constraintStart_toEndOf="@id/nameValue"
        app:layout_constraintTop_toTopOf="@id/nameValue"
        tools:text="@string/birth_date" />

    <TextView
        android:id="@+id/emailValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textSize="@dimen/subtitle_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/nameValue"
        tools:text="@string/email_id" />

    <View
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/emailValue" />

</androidx.constraintlayout.widget.ConstraintLayout>
